--- a/src/app/kitchenstaff/kitchenstaff.component.scss
+++ b/src/app/kitchenstaff/kitchenstaff.component.scss
@@ -19,6 +19,7 @@ header {
   display: flex;
   justify-content: space-between;
   width: 80%;
+  align-items: center;
 
   .weathertime {
     display: flex;
