--- a/src/app/pickup/pickup.component.scss
+++ b/src/app/pickup/pickup.component.scss
@@ -18,6 +18,7 @@ body {
 header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 
   .weathertime {
     display: flex;
@@ -39,6 +40,7 @@ header {
   display: flex;
   flex-direction: column;
   gap: 8px;
+  height: 305x;
 
   .titletypeorder {
     display: flex;
